kubernetes/preprod/deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mari-api-utility-preprod
  labels:
    app: mari-api-utility-preprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mari-api-utility-preprod
  template:
    metadata:
      labels:
        app: mari-api-utility-preprod
        
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: mari-api-utility-preprod
        image: reghbpr01.dc1.true.th/mari/mari-api/utility:%VERSION%
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: mari-api-utility
          mountPath: "/usr/src/mari-api-utility"
          readOnly: true
      volumes:
      - name: mari-api-utility
        configMap:
          name: mari-api-utility
          items:
          - key: "config.json"
            path: "config.json"
      # sidecar agent
      # - image: reghbpr01.dc1.true.th/jaegertracing/jaeger-agent:1.8.0
      #   name: jaeger-agent
      #   resources:
      #     requests:
      #       memory: "50Mi"
      #       cpu: "100m"
      #     limits:
      #       memory: "50Mi"
      #       cpu: "100m"
      #   ports:
      #   - containerPort: 5775
      #     protocol: UDP
      #   - containerPort: 6831
      #     protocol: UDP
      #   - containerPort: 6832
      #     protocol: UDP
      #   - containerPort: 5778
      #     protocol: TCP
      #   args: ["--collector.host-port=jaeger-collector.eam:14267"]

---
apiVersion: v1
kind: Service
metadata:
  name: mari-api-utility-preprod
  labels:
    app: mari-api-utility-preprod
spec:
  ports:
  - port: 3001
    protocol: TCP
  selector:
    app: mari-api-utility-preprod
